--- a/package.json
+++ b/package.json
@@ -4,34 +4,13 @@
   "private": true,
   "description": "",
   "templateInfo": {
-    "name": "react-native",
+    "name": "miniapp",
     "typescript": true,
     "css": "sass"
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch --qr",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "podInstall": "pod-install",
-    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.6.10 -o -Y && install-peerdeps @tarojs/components-rn@3.6.10 -o -Y && install-peerdeps @tarojs/router-rn@3.6.10 -o -Y && pod-install"
+    "dev:weapp": "npm run build:weapp -- --watch"
   },
   "browserslist": [
     "last 3 versions",
@@ -41,54 +20,37 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.6.10",
-    "@tarojs/helper": "3.6.10",
-    "@tarojs/plugin-framework-react": "3.6.10",
-    "@tarojs/plugin-platform-alipay": "3.6.10",
-    "@tarojs/plugin-platform-h5": "3.6.10",
-    "@tarojs/plugin-platform-jd": "3.6.10",
-    "@tarojs/plugin-platform-qq": "3.6.10",
-    "@tarojs/plugin-platform-swan": "3.6.10",
-    "@tarojs/plugin-platform-tt": "3.6.10",
-    "@tarojs/plugin-platform-weapp": "3.6.10",
-    "@tarojs/react": "3.6.10",
-    "@tarojs/rn-supporter": "3.6.10",
-    "@tarojs/runtime": "3.6.10",
-    "@tarojs/runtime-rn": "3.6.10",
-    "@tarojs/shared": "3.6.10",
-    "@tarojs/taro": "3.6.10",
-    "@tarojs/taro-rn": "3.6.10",
-    "ajv": "^8.17.1",
+    "@tarojs/components": "4.0.9",
+    "@tarojs/helper": "4.0.9",
+    "@tarojs/plugin-framework-react": "4.0.9",
+    "@tarojs/plugin-platform-weapp": "4.0.9",
+    "@tarojs/react": "4.0.9",
+    "@tarojs/runtime": "4.0.9",
+    "@tarojs/shared": "4.0.9",
+    "@tarojs/taro": "4.0.9",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-native": "^0.70.1"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.6.10",
-    "@tarojs/rn-runner": "3.6.10",
-    "@tarojs/taro-loader": "3.6.10",
-    "@tarojs/webpack5-runner": "3.6.10",
-    "@types/node": "^18.15.11",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/preset-react": "^7.26.3",
+    "@tarojs/cli": "4.0.9",
+    "@tarojs/webpack5-runner": "4.0.9",
+    "@types/node": "^22.13.1",
     "@types/react": "^18.0.0",
-    "@types/react-native": "^0.69.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.6.10",
+    "babel-preset-taro": "4.0.9",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "3.6.10",
+    "eslint-config-taro": "4.0.9",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "install-peerdeps": "^3.0.3",
-    "pod-install": "^0.1.23",
-    "postcss": "^8.4.18",
-    "react-refresh": "^0.11.0",
     "stylelint": "9.3.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.1.0",
-    "webpack": "^5.78.0"
+    "webpack": "^5.97.1"
   }
 }
