--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
-    "dev:weapp": "npm run build:weapp -- --watch"
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:h5": "taro build --type h5 --watch",
+    "build:h5": "taro build --type h5"
   },
   "browserslist": [
     "last 3 versions",
@@ -23,6 +25,7 @@
     "@tarojs/components": "4.0.9",
     "@tarojs/helper": "4.0.9",
     "@tarojs/plugin-framework-react": "4.0.9",
+    "@tarojs/plugin-platform-h5": "^4.0.9",
     "@tarojs/plugin-platform-weapp": "4.0.9",
     "@tarojs/react": "4.0.9",
     "@tarojs/runtime": "4.0.9",
@@ -36,6 +39,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-class-properties": "^7.25.9",
     "@babel/preset-react": "^7.26.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@tarojs/cli": "4.0.9",
     "@tarojs/webpack5-runner": "4.0.9",
     "@types/node": "^22.13.1",
@@ -49,6 +53,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "react-refresh": "^0.16.0",
     "stylelint": "9.3.0",
     "typescript": "^4.1.0",
     "webpack": "^5.97.1"
