--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tarojs/shared": "4.0.9",
     "@tarojs/taro": "4.0.9",
     "react": "^18.1.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
