--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@tarojs/helper": "4.0.9",
     "@tarojs/plugin-framework-react": "4.0.9",
     "@tarojs/plugin-platform-h5": "^4.0.9",
-    "@tarojs/plugin-platform-weapp": "4.0.9",
     "@tarojs/react": "4.0.9",
     "@tarojs/runtime": "4.0.9",
     "@tarojs/shared": "4.0.9",
@@ -42,9 +41,10 @@
     "@babel/preset-react": "^7.26.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@tarojs/cli": "4.0.9",
+    "@tarojs/plugin-platform-weapp": "^4.0.9",
     "@tarojs/webpack5-runner": "4.0.9",
     "@types/node": "^22.13.1",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.3.18",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -57,6 +57,6 @@
     "react-refresh": "^0.16.0",
     "stylelint": "9.3.0",
     "typescript": "^4.1.0",
-    "webpack": "^5.97.1"
+    "webpack": "^5.91.0"
   }
 }
